--- a/main.tex
+++ b/main.tex
@@ -7,6 +7,7 @@
 
 \newtheorem{defn}[equation]{Definition}
 \newtheorem{coro}[equation]{Corollary}
+\newtheorem{prf}[equation]{Proof}
 
 
 \begin{document}
@@ -26,35 +27,37 @@
 
 Say we're looking at weather. We'll want to know the temperature, wind speed, humidity, whereabouts, etc.
 
-- \emph{We can assign a real number value to it, this gives us quantities}
+- \emph{We can say it lives in some subset of possibilities, and can give real number values corresponding to that subset. This gives us quantities}
 
-Fahrenheit, mph, percent humidity, location 
+Fahrenheit, mph, percent humidity, location.
+On some set of all possible weather configurations, we look at a specific subset of possibilities. This is our weather report.  
 
-TODO: talk about subset of space
+
+
 
 
 
 \begin{defn}
-	A \textbf{quantity} is a function $q : U \to \mathbb{R}$ that assigns a measurable value to a physical object.
+	A \textbf{quantity} is an invertible function $q : U \to \mathbb{R}$ that assigns a measurable value to a physical object.
 \end{defn}
 
 
-- \emph{Having a set of quantities gives us a coordinate system}
+- \emph{Having a set of linearly independent quantities sufficient to distinguish one object from another gives us a coordinate system}
 
-TODO: what is missing?
-TODO: Notation?
+
+
 
 \begin{defn}
-	A \textbf{coordinate system} $\vec{q}$ is a collection of $n$ quantities $q^i : U \to \mathbb{R}$ such that there is a one-to-one relationship between the physical objects in $U$ and the values of the quantities in $\mathbb{R}^n$.
+	A \textbf{coordinate system} $[q]$ is a collection of $n$ quantities $q^i : U \to \mathbb{R}$ such that there is a one-to-one relationship between the physical objects in $U$ and the values of the quantities in $\mathbb{R}^n$.
 \end{defn}
 
 
-- \emph{Coordinate systems can be transformed between}
+- \emph{\textbf{Overlapping} coordinate systems can be transformed between}
 
-TODO: When?
+
 
 \begin{defn}
-	Given two coordinate systems  $\vec{q} : U \to \mathbb{R}^n$ and $\vec{p} : V \to \mathbb{R}^n$ such that $U \cap V \neq \emptyset$, we call a \textbf{coordinate transformation} the function $f = \vec{p} \circ (\vec{q})^{-1} : \mathbb{R}^n \to \mathbb{R}^n$.
+	Given two coordinate systems  $[q] : U \to \mathbb{R}^n$ and $[p] : V \to \mathbb{R}^n$ such that $U \cap V \neq \emptyset$, we call a \textbf{coordinate transformation} the function $f = [p] \circ ([q])^{-1} : \mathbb{R}^n \to \mathbb{R}^n$.
 \end{defn}
 
 
@@ -62,30 +65,42 @@ TODO: When?
 
 - \emph{Now that we have sets that can be mapped to the real numbers, we can define manifolds}
 
-For the weather example, a manifold would all possible weather conditions (including things that can't necessarily be quantified, like the color of a sunset), with a subsection whereon is defined a weather report, measuring temperature, wind speed, etc. in different places. There will always be an uncertainty in the exact report, however small.  
+For the weather example, a manifold would be all possible weather conditions (including things that can't necessarily be quantified, like the color of a sunset), with a subsection whereon is defined a weather report, measuring temperature, wind speed, etc. in different places. If we're looking to parametrize the entire earth, then our manifold cannot be covered with a single subset, because the earth is roughly a sphere. We will need multiple subsets to cover all of the earth, and all possible weather conditions. 
 
-TODO: No uncertainty. Talk about "atlas"
+
  
 \begin{defn}
-	A \textbf{manifold} is a set of physical objects $X$ such that for any $x \in X$ there exists a $U \subset X$ that contains $x$ and upon which a coordinate system $\vec{q}$ is defined.
+	A \textbf{manifold} is a set of physical objects $X$ such that for any $x \in X$ there exists a $U \subset X$ that contains $x$ and upon which a coordinate system $[q]$ is defined.
 \end{defn}
 
+\begin{defn}
+	For a given manifold X, a collection of subsets of X that completely cover X are called the \textbf{atlases} of X. 
+\end{defn}
 
 
 
 \subsection{Sub-manifolds and k-surfaces}
 
-- \emph{Within a manifold can lie a manifold of a smaller dimension, with a mapping between them}
-If in the original weather report we were worrying about temperature, humidity, and wind speed, perhaps now we're only worrying about temperature and humidity. The latter would be a sub-manifold of the former. 
-The ignored dimensions must be held fixed, otherwise the original manifold is recovered. 
+- \emph{Within a manifold can lie a manifold of equal or smaller dimension, with a mapping between them}
 
-TODO: or equal; more emph on fixed values
+If in the original weather report we were worrying about temperature, humidity, and wind speed, we could instead hold one of the three values fixed (say, humidity), and vary the other two. The latter manifold, with humidity held constant, would be a sub-manifold of the former, where all three variables are allowed to change.  
+
+
 
 \begin{defn}
-	Given some manifold X of dimension n, a \textbf{sub-manifold} of dimension m is a manifold $Y \subset X$ such that $m \leq n$, with an injective coordinate transformation $f: \mathbb{R}^m \to \mathbb{R}^n$. 
+	Consider a manifold X of dimension n, and a manifold Y of dimension m, such that $m \leq n$. Y is a \textbf{submanifold} of X if:
+	
+	1. Any point on Y is also a point on X; and,
+	
+	2. there are points on X that are not on Y. 
 \end{defn}
 
-TODO: define sub-manifold on points. Then derive the relationship between coordinates (i.e. parametrization)
+\begin{coro}
+	Suppose we have a manifold X of dimension n, with a submanifold Y of dimension m, such that $m \leq n$. Recalling the definition of submanifolds, this means that any point that lies in Y also lies in X, but the inverse is not true. Therefore, the coordinate transformation from X to Y will be onto, while the coordinate transformation from Y to X will be one-to-one. 
+\end{coro}
+
+
+\emph{What are the possible submanifolds of a given manifold?}
 
 
 \begin{defn}
@@ -93,19 +108,60 @@ TODO: define sub-manifold on points. Then derive the relationship between coordi
 \end{defn}
 
 - \emph{A manifold of dimension n can have a boundary of dimension n-1. The boundary itself will not have a boundary.}
-The boundary of a weather report would be 
+
+The boundary of a weather report would be readings restricted to a specific climate. 
+
 
 \begin{defn}
-	Given k-surface $\sigma \in S_k \subset X$, $\forall x \in \sigma$, $\exists$ a neighborhood $U \subset X$ containing $x$ homeomorphic to an open set in $\mathbb{R}^k$. The \textbf{boundary} of $\sigma$, denoted $\partial\sigma$, consists of points that are not homeomorphic to an open set in $\mathbb{R}^k$. 
+	Given k-surface $\sigma \in S_k$, if for some point $x \in \sigma$ you can construct a neighborhood around x completely within $\sigma$, then x is an \textbf{interior point} of $\sigma$. 
 \end{defn}
 
-TODO: define interior point first; then define boundary point as not interior.
+\begin{defn}
+	Given k-surface $\sigma \in S_k$, if some point $x \in \sigma$ is not an interior point (i.e., a neighborhood around x entirely within $S_k$ cannot be made), then $x$ is a \textbf{boundary point. }
+\end{defn}
+
+\begin{defn}
+	Given k-surface $\sigma \in S_k$, $\partial\sigma \in S_{k-1}$ is the set of all boundary points of $\sigma$, or, the \textbf{boundary} of $\sigma$. 
+\end{defn}
+
 
 \begin{coro}
 	Given $\sigma \subset S_k$, $\partial\sigma \subset S_{k-1}$, and $\partial\partial\sigma = \emptyset$. 
 \end{coro}
 
-TODO: parametrization of the boundary	
+TODO: parametrization of the boundary (\emph{consider a cube, rather than a ball})
+
+\subsection{Linear Functionals of K-surfaces}
+
+
+\begin{defn}
+	A \textbf{linear function of k-surfaces} is a function $F : S_k \to \mathbb{R}$ such that for $\sigma_1$, $\sigma_2 \in S_k$, if $\sigma_1 \cap \sigma_2 \subseteq \partial\sigma_1 \cup \partial\sigma_2$, then $F(\sigma_1\cup\sigma_2) = F(\sigma_1) + F(\sigma_2)$. 
+\end{defn}
+
+
+Given $F : S_k \to \mathbb{R}$, we can then define $G : S_{k+1} \to \mathbb{R}$ such that $G(\sigma) = F(\partial\sigma)$, and $H : S_{k+2} \to \mathbb{R}$ such that $H(\sigma) = G(\partial\sigma) = F(\partial\partial\sigma)$. 
+
+\begin{prf}
+	We want to show that a linear functional applied to the empty set gives zero. 
+	
+	Let $F : S_k \to \mathbb{R}$ be a linear function. Consider the empty set $\emptyset$. 
+	Trivially, $\emptyset \cap \emptyset \subseteq \partial\emptyset \cup \partial\emptyset$, and $\emptyset = \emptyset\cup\emptyset$. 
+	
+	So, $F(\emptyset) = F(\emptyset\cup\emptyset) = F(\emptyset) + F(\emptyset) \implies F(\emptyset) = 2F(\emptyset) \implies F(\emptyset) = 0$
+	$\qedsymbol$
+\end{prf}
+
+TODO: notation for F $\to$ G (\emph{I've asked a couple people about this. General consensus is that the notation is unfortunate, but it is a clear representation of what's happening})
+
+\begin{prf}
+	We want to show that a linear functional applied to a surface whereon the boundary operator was applied twice will always give zero.
+	
+	Let $F : S_k \to \mathbb{R}, G : S_{k+1} \to \mathbb{R}, and H : S_{k+2} \to \mathbb{R}$ be linear functions, and let $\sigma$ be an element of $S_k$. $H(\sigma) = G(\partial\sigma) = F(\partial\partial\sigma) = F(\emptyset) = 0$. 
+	
+	So, $H(\sigma) = 0$ $\forall$ $\sigma$, and H is the zero function. 
+	$\qedsymbol$
+\end{prf}
+
 
 
 
@@ -120,7 +176,7 @@ We are interested in studying distribution on manifolds. Talk about them as a me
 
 
 \begin{defn}
-	Given some manifold $X$ of dimension $n$, with overlapping subsets $U$ and $V$ with defined coordinate systems $\vec{q}: U \to \mathbb{R}^n$ and $\vec{p}: V \to \mathbb{R}^n$, if the coordinate transformation $f = \vec{q} \circ \vec{p}^{-1}$ is smooth, then $X$ is a \textbf{differentiable manifold}. 
+	Given some manifold $X$ of dimension $n$, with overlapping subsets $U$ and $V$ with defined coordinate systems $[q]: U \to \mathbb{R}^n$ and $[p]: V \to \mathbb{R}^n$, if the coordinate transformation $f = [q] \circ [p]^{-1}$ is smooth, then $X$ is a \textbf{differentiable manifold}. 
 \end{defn}
 
 \begin{defn}
@@ -140,20 +196,7 @@ At any point on a manifold, we can calculate the tangent plane. An infinitesimal
 \section{Covectors and linear functions of displacements}
 We can define functions that convert infinitesimal displacements to a scalar value. 
 
-\subsection{Linear Functionals of K-surfaces}
-
-
-\begin{defn}
-	A \textbf{linear function of k-surfaces} is a function $F : S_k \to \mathbb{R}$ such that for $\sigma_1$, $\sigma_2 \in S_k$, if $\sigma_1 \cap \sigma_2 \subseteq \partial\sigma_1 \cup \partial\sigma_2$, then $F(\sigma_1\cup\sigma_2) = F(\sigma_1) + F(\sigma_2)$. 
-\end{defn}
-
-
-Given $F : S_k \to \mathbb{R}$, we can then define $G : S_{k+1} \to \mathbb{R}$ such that $G(\sigma) = F(\partial\sigma)$, and $H : S_{k+2} \to \mathbb{R}$ such that $H(\sigma) = G(\partial\sigma) = F(\partial\partial\sigma)$. 
-
-TODO: show that the functions applied to the empty set must give zero
-TODO: notation for F -> G
-TODO: show that applying the operation twice gives always zero (i.e. H is the zero function)
-TODO: move to end of previous chapter
+TODO: Think about the notation for differential of a boundary. It's kind of ugly. The previous statement of others confirming that it's clear, however, still applies. 
 
 \begin{defn}
 	A linear function may be defined \textbf{infinitesimally}, such that $F : S_k \to \mathbb{R} = \int_{\sigma} f(d\sigma)$. Further, for $G : S_{k+1} \to \mathbb{R}$, $G(\sigma) = \int_{\sigma} g(d\sigma) = F(\partial\sigma) = \int_{\partial\sigma}f(d\partial\sigma)$. 
@@ -163,6 +206,8 @@ TODO: move to end of previous chapter
 \section{Tensors and coordinate transformations}
 Some quantities can undergo one-to-one transformations between coordinate systems. In general, such quantities are tensors. 
 
+\emph{Use some variant of the definition used in d'Inverno}
+
 \section{K-forms and wedge product}
 In more abstract or complicated coordinate systems, it becomes useful to define geometry on infinitesimal displacements. 
 
@@ -171,10 +216,15 @@ In more abstract or complicated coordinate systems, it becomes useful to define 
 \end{defn}
 
 \begin{defn}
-	Given vectors $u, v \in U$, the \textbf{wedge product} $u \wedge v: V \times V \to...$ 
+	Given vectors $u, v \in U$, the \textbf{wedge product} $u \wedge v: V \times V \to V$, and describes the area of a parallelogram with sides u and v. 
 \end{defn}
+
+- \emph{We want to be able to describe displacements and functions along them independent of coordinate system. This gives us differential forms}
+
+TODO: \emph{\textbf{Definitely fix up this definition of differential forms}}
+
 \begin{defn}
-	A \textbf{differential k-form} is made by wedging together k different differentials, which can be used to describe the length, area, volume, etc. of an appropriately dimensioned space. 
+	A \textbf{differential k-form} is a linear function of contravariant vectors along covariant differential elements used to describe the length, area, volume, etc. of an appropriately dimensioned space 
 \end{defn}
 
 
@@ -192,7 +242,7 @@ In order to give a mathematically rigorous definition of lengths of vectors and 
 
 
 \subsection{Metric tensor}
-The inner product itself: feed in two vectors, and the outcome is a scalar representing the lengths of the vectors and the angle between them. 
+A more generalized inner product: feed in two vectors, and the outcome is a scalar representing the lengths of the vectors and the angle between them. 
 \subsection{Orthogonal basis}
 
 \section{Symplectic geometry and state spaces}
